# Django-ORM-Tool

./: .gitignore  ChangeLog  LICENSE  README.md  autocommit.py  autocommits.py  dbconfig.json  main.py  package.py  requirements.txt  setup.cfg  test.py
dotlib/: __init__.py  core.py  meta_reflex.py  settings.py  utils.py
haorm/: __init__.py  context.py  core.py  meta_reflex.py  router.py  settings.py
tests/: test-db.db  test.py  test_orm.py
