[metadata]
name = haorm
author = singein
author-email = singein@outlook.com
summary = awsome project created by pycman.
license = MIT
description-file =
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages =
    haorm


[entry_points]
console_scripts =
    haorm=haorm.core:create_temp_config
